clusters/local/apps/podinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: podinfo
  namespace: apps

spec:
  replicas: 2

  selector:
    matchLabels:
      app: podinfo

  template:
    metadata:
      labels:
        app: podinfo

    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.13.0

          ports:
            - containerPort: 9898

          livenessProbe:
            httpGet:
              path: /healthz
              port: 9898

          readinessProbe:
            httpGet:
              path: /readyz
              port: 9898
