clusters/local/apps/podinfo/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: podinfo
  namespace: apps

  labels:
    app: podinfo

spec:
  selector:
    app: podinfo

  ports:
    - name: http
      port: 80
      targetPort: 9898
